--- a/realCoins/Style/Container_ref.css
+++ b/realCoins/Style/Container_ref.css
@@ -12,6 +12,7 @@
     border-radius: 6px;
     font-size: 25px;
     text-align: center;
+    font-weight: bold;
 }
 .inviteLink_div{
     background-color: rgb(0, 0, 55);
@@ -36,6 +37,7 @@
     width: 240px;
     font-size: 12px;
     margin-top: 10px;
+     word-break: break-all;
 }
 .inviteLink_divCopyButton{
     background-color: rgb(0, 0, 107);
