--- a/realCoins/Style/mainStyle/mainContainer_body.css
+++ b/realCoins/Style/mainStyle/mainContainer_body.css
@@ -147,7 +147,8 @@
     
 }
 .coinsClickButton_container:active{
-   border: 2px solid transparent;
+  border: 1px solid transparent;
+   background-color: rgb(0, 0, 112);
 }
 .displayByClick_radius_1{
     border-radius: 80px 0px 0px 0px;
