--- a/realCoins/Style/Container_Wallet.css
+++ b/realCoins/Style/Container_Wallet.css
@@ -1,6 +1,7 @@
 /*chooseWalletContainerDiv*/
 .chooseWalletContainerDiv{
     background-color: rgb(0, 0, 17);
+    background-color: rgb(0, 0, 28);
     width: 100%;
     height: 400px;
     position: fixed;
